[tool.poetry]
name = "poetryproject"
version = "0.1.0"
description = "Poetry project example"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pydantic = "^2.7.0"
pymongo = "^4.6.3"
fastapi = "^0.110.1"
motor = "^3.4.0"
asyncio = "^3.4.3"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
